# relprim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: advanced-usage.md  getting-started.md
examples/: basic_resilience.py  circuit_breaker.py  decorator_usage.py  fallback_chain.py  structured_events.py  validation.py
src/relprim/: __init__.py  circuit_breaker.py  decorators.py  errors.py  events.py  fallback.py  operation.py  report.py  result.py  retry.py  timeout.py  validation.py
tests/: test_circuit_breaker.py  test_decorators.py  test_events.py  test_fallback.py  test_import.py  test_operation.py  test_report.py  test_result.py  test_retry.py  test_timeout.py  test_validation.py
