[project]
name = "relprim"
version = "0.1.0"
description = "Reliability primitives for Python applications."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["relprim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]